src/parser.output
Nonterminals useless in grammar

    EXPR_STMT_CODE
    $@3


Terminals unused in grammar

    _


Rules useless in grammar

  275 $@3: %empty

  276 EXPR_STMT_CODE: $@3 ExpressionStatement


State 85 conflicts: 2 shift/reduce
State 233 conflicts: 14 shift/reduce
State 412 conflicts: 25 shift/reduce


Grammar

    0 $accept: CompilationUnit $end

    1 Literal: integerLiteral
    2        | FloatingPointLiteral
    3        | booleanLiteral
    4        | characterLiteral
    5        | stringLiteral
    6        | textBlock
    7        | nullLiteral

    8 PrimitiveType: NumericType
    9              | BOOLEAN

   10 NumericType: IntegralType
   11            | FloatingPointType

   12 IntegralType: BYTE
   13             | SHORT
   14             | INT
   15             | LONG
   16             | CHAR

   17 FloatingPointType: FLOAT
   18                  | DOUBLE

   19 Dims: '[' ']'
   20     | '[' ']' Dims

   21 Name: SimpleName
   22     | QualifiedName

   23 SimpleName: Identifier

   24 QualifiedName: Name '.' SimpleName

   25 CompilationUnit: OrdinaryCompilationUnit

   26 OrdinaryCompilationUnit: PackageDeclaration TopLevelClassOrInterfaceDeclarations
   27                        | TopLevelClassOrInterfaceDeclarations

   28 TopLevelClassOrInterfaceDeclarations: %empty
   29                                     | TopLevelClassOrInterfaceDeclaration TopLevelClassOrInterfaceDeclarations

   30 TopLevelClassOrInterfaceDeclaration: ClassDeclaration
   31                                    | ';'

   32 PackageDeclaration: PACKAGE Name ';'

   33 ClassDeclaration: Modifiers CLASS G S ClassBody
   34                 | CLASS G S ClassBody

   35 Modifiers: Modifier
   36          | Modifier Modifiers

   37 Modifier: PUBLIC
   38         | PRIVATE
   39         | STATIC
   40         | FINAL

   41 ClassBody: '{' ClassBodyDeclarations '}'

   42 ClassBodyDeclarations: %empty
   43                      | ClassBodyDeclarations ClassBodyDeclaration

   44 ClassBodyDeclaration: FieldDeclaration
   45                     | MethodDeclaration
   46                     | StaticInitializer
   47                     | ConclassorDeclaration

   48 FieldDeclaration: Modifiers PrimitiveType VariableDeclaratorList ';'
   49                 | PrimitiveType VariableDeclaratorList ';'

   50 VariableDeclaratorList: VariableDeclarator
   51                       | VariableDeclaratorList ',' VariableDeclarator

   52 VariableDeclarator: Declarator
   53                   | Declarator '=' VariableInitializer

   54 Declarator: Identifier
   55           | Declarator '[' ']'

   56 MethodDeclaration: MethodHeader MethodBody

   57 MethodHeader: Modifiers PrimitiveType MethodorConstrDeclarator
   58             | PrimitiveType MethodorConstrDeclarator
   59             | Modifiers VOID2 MethodorConstrDeclarator
   60             | VOID2 MethodorConstrDeclarator

   61 VOID2: VOID

   62 MethodorConstrDeclarator: SimpleName2 '(' A FormalParameterList ')' NEXT_QUAD
   63                         | SimpleName2 '(' A ')' Dimsy

   64 SimpleName2: Identifier

   65 VariableInitializer: Expression
   66                    | ArrayInitializer

   67 Dimsy: %empty
   68      | Dims

   69 FormalParameterList: FormalParameter
   70                    | FormalParameterList ',' NEXT_QUAD FormalParameter

   71 FormalParameter: PrimitiveType SimpleName2 Dimsy

   72 MethodBody: Block
   73           | ';'

   74 StaticInitializer: STATIC Block

   75 ConclassorDeclaration: Modifiers MethodorConstrDeclarator ConclassorBody

   76 ConclassorBody: '{' ExplicitConclassorInvocation BlockStatements '}'
   77               | '{' BlockStatements '}'

   78 ExplicitConclassorInvocation: THIS '(' ArgumentListy ')' ';'
   79                             | SUPER '(' ArgumentListy ')' ';'

   80 ArgumentListy: %empty
   81              | ArgumentList

   82 comay: %empty
   83      | ','

   84 ClassBodyy: %empty
   85           | ClassBody

   86 ArrayInitializer: '{' VariableInitializerList comay '}'
   87                 | '{' comay '}'

   88 VariableInitializerList: VariableInitializer
   89                        | VariableInitializerList ',' VariableInitializer

   90 Block: '{' ChangeTable BlockStatements '}'

   91 BlockStatements: %empty
   92                | BlockStatements NEXT_QUAD BlockStatement

   93 BlockStatement: Declaration_list
   94               | Statement

   95 Declaration_list: LocalVariableDeclaration ';'
   96                 | ClassDeclaration

   97 LocalVariableDeclaration: PrimitiveType VariableDeclaratorList

   98 Statement: StatementWithoutTrailingSubstatement
   99          | LabeledStatement
  100          | IfThenStatement
  101          | IfThenElseStatement
  102          | WhileStatement
  103          | ForStatement

  104 StatementNoShortIf: StatementWithoutTrailingSubstatement
  105                   | LabeledStatementNoShortIf
  106                   | IfThenElseStatementNoShortIf
  107                   | WhileStatementNoShortIf
  108                   | ForStatementNoShortIf

  109 StatementWithoutTrailingSubstatement: Block
  110                                     | ';'
  111                                     | ExpressionStatement
  112                                     | BreakStatement
  113                                     | ContinueStatement
  114                                     | ReturnStatement
  115                                     | SynchronizedStatement
  116                                     | ThrowStatement
  117                                     | YieldStatement

  118 LabeledStatement: SimpleName ':' NEXT_QUAD Statement

  119 LabeledStatementNoShortIf: SimpleName ':' StatementNoShortIf

  120 ExpressionStatement: StatementExpression ';'

  121 StatementExpression: Assignment
  122                    | PreIncrementExpression
  123                    | PreDecrementExpression
  124                    | PostIncrementExpression
  125                    | PostDecrementExpression
  126                    | MethodInvocation
  127                    | ClassInstanceCreationExpression

  128 $@1: %empty

  129 IF_CODE: IF $@1 '(' Expression ')'

  130 IfThenStatement: IF_CODE NEXT_QUAD Statement

  131 IfThenElseStatement: IF_CODE NEXT_QUAD StatementNoShortIf N ELSE NEXT_QUAD Statement

  132 IfThenElseStatementNoShortIf: IF_CODE NEXT_QUAD StatementNoShortIf N ELSE NEXT_QUAD StatementNoShortIf

  133 WhileStatement: WHILE '(' NEXT_QUAD EXPR_CODE ')' NEXT_QUAD Statement

  134 WhileStatementNoShortIf: WHILE '(' NEXT_QUAD EXPR_CODE ')' NEXT_QUAD StatementNoShortIf

  135 ForStatement: BasicForHeader Statement
  136             | EnhancedForHeader Statement

  137 ForStatementNoShortIf: BasicForHeader StatementNoShortIf
  138                      | EnhancedForHeader StatementNoShortIf

  139 BasicForHeader: FOR '(' ForInity ';' Expressiony ';' ForUpdatey ')'

  140 EnhancedForHeader: FOR '(' LocalVariableDeclaration ':' Expression ')'

  141 ForInity: %empty
  142         | ForInit

  143 Expressiony: %empty
  144            | Expression

  145 ForUpdatey: %empty
  146           | ForUpdate

  147 ForInit: StatementExpressionList
  148        | LocalVariableDeclaration

  149 ForUpdate: StatementExpressionList

  150 StatementExpressionList: StatementExpression
  151                        | StatementExpression ',' StatementExpressionList

  152 BreakStatement: BREAK SimpleName ';'
  153               | BREAK ';'

  154 YieldStatement: YIELD Expression ';'

  155 ContinueStatement: CONTINUE SimpleName ';'
  156                  | CONTINUE ';'

  157 ReturnStatement: RETURN Expression ';'
  158                | RETURN

  159 ThrowStatement: THROW Expression ';'

  160 SynchronizedStatement: SYNCHRONIZED '(' Expression ')' Block

  161 $@2: %empty

  162 EXPR_CODE: $@2 StatementExpression

  163 N: %empty

  164 Primary: PrimaryNoNewArray
  165        | ArrayCreationExpression

  166 PrimaryNoNewArray: Literal
  167                  | THIS
  168                  | '(' Expression ')'
  169                  | ClassInstanceCreationExpression
  170                  | FieldAccess
  171                  | ArrayAccess
  172                  | MethodInvocation

  173 ClassInstanceCreationExpression: UnqualifiedClassInstanceCreationExpression
  174                                | Name '.' UnqualifiedClassInstanceCreationExpression
  175                                | Primary '.' UnqualifiedClassInstanceCreationExpression

  176 UnqualifiedClassInstanceCreationExpression: NEW ClassOrInterfaceTypeToInstantiate '(' ArgumentListy ')' ClassBodyy

  177 ClassOrInterfaceTypeToInstantiate: SimpleName ClassOrInterfaceTypeToInstant TypeArgumentsOrDiamondy

  178 TypeArgumentsOrDiamondy: %empty
  179                        | TypeArgumentsOrDiamond

  180 ClassOrInterfaceTypeToInstant: %empty
  181                              | '.' SimpleName ClassOrInterfaceTypeToInstant

  182 TypeArgumentsOrDiamond: '<' '>'

  183 FieldAccess: Primary '.' SimpleName
  184            | SUPER '.' SimpleName

  185 ArrayAccess: Name '[' Expression ']'
  186            | PrimaryNoNewArray '[' Expression ']'

  187 MethodInvocation: Name '(' ArgumentListy ')'
  188                 | Primary '.' SimpleName '(' ArgumentListy ')'
  189                 | SUPER '.' SimpleName '(' ArgumentListy ')'

  190 ArgumentList: Expression
  191             | ArgumentList ',' Expression

  192 ArrayCreationExpression: NEW PrimitiveType DimExprs Dimsy
  193                        | NEW PrimitiveType Dims ArrayInitializer

  194 DimExprs: DimExpr
  195         | DimExprs DimExpr

  196 DimExpr: '[' Expression ']'

  197 Expression: AssignmentExpression

  198 AssignmentExpression: Assignment
  199                     | ConditionalExpression

  200 $@4: %empty

  201 Assignment: LeftHandSide AssignmentOperator $@4 AssignmentExpression

  202 LeftHandSide: Name
  203             | FieldAccess
  204             | ArrayAccess

  205 AssignmentOperator: '='
  206                   | DIV_ASSIGN
  207                   | MUL_ASSIGN
  208                   | MOD_ASSIGN
  209                   | ADD_ASSIGN
  210                   | SUB_ASSIGN
  211                   | LEFT_ASSIGN
  212                   | RIGHT_ASSIGN
  213                   | UNSIGNED_RIGHT_ASSIGN
  214                   | AND_ASSIGN
  215                   | XOR_ASSIGN
  216                   | OR_ASSIGN

  217 ConditionalExpression: GOTO_COND NEXT_QUAD Expression WRITE_GOTO ':' NEXT_QUAD ConditionalExpression
  218                      | ConditionalOrExpression

  219 GOTO_COND: ConditionalOrExpression '?'

  220 WRITE_GOTO: %empty

  221 ConditionalOrExpression: GOTO_OR NEXT_QUAD ConditionalAndExpression
  222                        | ConditionalAndExpression

  223 GOTO_OR: ConditionalOrExpression OR_OP

  224 ConditionalAndExpression: GOTO_AND NEXT_QUAD InclusiveOrExpression
  225                         | InclusiveOrExpression

  226 GOTO_AND: ConditionalAndExpression AND_OP

  227 InclusiveOrExpression: InclusiveOrExpression '|' ExclusiveOrExpression
  228                      | ExclusiveOrExpression

  229 ExclusiveOrExpression: ExclusiveOrExpression '^' AndExpression
  230                      | AndExpression

  231 AndExpression: AndExpression '&' EqualityExpression
  232              | EqualityExpression

  233 EqualityExpression: EqualityExpression EQ_OP RelationalExpression
  234                   | EqualityExpression NE_OP RelationalExpression
  235                   | RelationalExpression

  236 RelationalExpression: RelationalExpression '<' ShiftExpression
  237                     | RelationalExpression '>' ShiftExpression
  238                     | RelationalExpression GE_OP ShiftExpression
  239                     | RelationalExpression LE_OP ShiftExpression
  240                     | ShiftExpression

  241 ShiftExpression: ShiftExpression LEFT_OP AdditiveExpression
  242                | ShiftExpression RIGHT_OP AdditiveExpression
  243                | ShiftExpression UNSIGNED_RIGHT AdditiveExpression
  244                | AdditiveExpression

  245 AdditiveExpression: AdditiveExpression '+' MultiplicativeExpression
  246                   | AdditiveExpression '-' MultiplicativeExpression
  247                   | MultiplicativeExpression

  248 MultiplicativeExpression: MultiplicativeExpression '*' UnaryExpression
  249                         | MultiplicativeExpression '/' UnaryExpression
  250                         | MultiplicativeExpression '%' UnaryExpression
  251                         | UnaryExpression

  252 UnaryExpression: PreIncrementExpression
  253                | PreDecrementExpression
  254                | '+' UnaryExpression
  255                | '-' UnaryExpression
  256                | UnaryExpressionNotPlusMinus

  257 PreIncrementExpression: INC_OP UnaryExpression

  258 PreDecrementExpression: DEC_OP UnaryExpression

  259 UnaryExpressionNotPlusMinus: PostfixExpression
  260                            | '~' UnaryExpression
  261                            | '!' UnaryExpression
  262                            | CastExpression

  263 PostfixExpression: Primary
  264                  | Name
  265                  | PostIncrementExpression
  266                  | PostDecrementExpression

  267 PostIncrementExpression: PostfixExpression INC_OP

  268 PostDecrementExpression: PostfixExpression DEC_OP

  269 CastExpression: '(' PrimitiveType ')' UnaryExpression

  270 G: Identifier

  271 S: %empty

  272 NEXT_QUAD: %empty

  273 ChangeTable: %empty

  274 A: %empty


Terminals, with rules where they appear

    $end (0) 0
    '!' <str> (33) 261
    '%' <str> (37) 250
    '&' <str> (38) 231
    '(' <str> (40) 62 63 78 79 129 133 134 139 140 160 168 176 187 188 189 269
    ')' <str> (41) 62 63 78 79 129 133 134 139 140 160 168 176 187 188 189 269
    '*' <str> (42) 248
    '+' <str> (43) 245 254
    ',' <str> (44) 51 70 83 89 151 191
    '-' <str> (45) 246 255
    '.' <str> (46) 24 174 175 181 183 184 188 189
    '/' <str> (47) 249
    ':' <str> (58) 118 119 140 217
    ';' <str> (59) 31 32 48 49 73 78 79 95 110 120 139 152 153 154 155 156 157 159
    '<' <str> (60) 182 236
    '=' <str> (61) 53 205
    '>' <str> (62) 182 237
    '?' <str> (63) 219
    '[' <str> (91) 19 20 55 185 186 196
    ']' <str> (93) 19 20 55 185 186 196
    '^' <str> (94) 229
    '{' <str> (123) 41 76 77 86 87 90
    '|' <str> (124) 227
    '}' <str> (125) 41 76 77 86 87 90
    '~' <str> (126) 260
    error (256)
    RIGHT_OP <str> (258) 242
    LEFT_OP <str> (259) 241
    EQ_OP <str> (260) 233
    NE_OP <str> (261) 234
    AND_OP <str> (262) 226
    OR_OP <str> (263) 223
    LE_OP <str> (264) 239
    GE_OP <str> (265) 238
    ADD_ASSIGN <str> (266) 209
    SUB_ASSIGN <str> (267) 210
    MUL_ASSIGN <str> (268) 207
    DIV_ASSIGN <str> (269) 206
    MOD_ASSIGN <str> (270) 208
    LEFT_ASSIGN <str> (271) 211
    RIGHT_ASSIGN <str> (272) 212
    AND_ASSIGN <str> (273) 214
    XOR_ASSIGN <str> (274) 215
    OR_ASSIGN <str> (275) 216
    UNSIGNED_RIGHT <str> (276) 243
    UNSIGNED_RIGHT_ASSIGN <str> (277) 213
    integerLiteral <str> (278) 1
    stringLiteral <str> (279) 5
    nullLiteral <str> (280) 7
    characterLiteral <str> (281) 4
    textBlock <str> (282) 6
    booleanLiteral <str> (283) 3
    FloatingPointLiteral <str> (284) 2
    Identifier <str> (285) 23 54 64 270
    CONTINUE <str> (286) 155 156
    FOR <str> (287) 139 140
    NEW <str> (288) 176 192 193
    IF <str> (289) 129
    PACKAGE <str> (290) 32
    SYNCHRONIZED <str> (291) 160
    BOOLEAN <str> (292) 9
    PRIVATE <str> (293) 38
    THIS <str> (294) 78 167
    BREAK <str> (295) 152 153
    DOUBLE <str> (296) 18
    THROW <str> (297) 159
    BYTE <str> (298) 12
    ELSE <str> (299) 131 132
    PUBLIC <str> (300) 37
    RETURN <str> (301) 157 158
    INT <str> (302) 14
    SHORT <str> (303) 13
    CHAR <str> (304) 16
    FINAL <str> (305) 40
    STATIC <str> (306) 39 74
    VOID <str> (307) 61
    CLASS <str> (308) 33 34
    LONG <str> (309) 15
    FLOAT <str> (310) 17
    SUPER <str> (311) 79 184 189
    WHILE <str> (312) 133 134
    _ <str> (313)
    YIELD <str> (314) 154
    INC_OP <str> (315) 257 267
    DEC_OP <str> (316) 258 268


Nonterminals, with rules where they appear

    $accept (86)
        on left: 0
    Literal <ptr> (87)
        on left: 1 2 3 4 5 6 7
        on right: 166
    PrimitiveType <ptr> (88)
        on left: 8 9
        on right: 48 49 57 58 71 97 192 193 269
    NumericType <ptr> (89)
        on left: 10 11
        on right: 8
    IntegralType <ptr> (90)
        on left: 12 13 14 15 16
        on right: 10
    FloatingPointType <ptr> (91)
        on left: 17 18
        on right: 11
    Dims <ptr> (92)
        on left: 19 20
        on right: 20 68 193
    Name <ptr> (93)
        on left: 21 22
        on right: 24 32 174 185 187 202 264
    SimpleName <ptr> (94)
        on left: 23
        on right: 21 24 118 119 152 155 177 181 183 184 188 189
    QualifiedName <ptr> (95)
        on left: 24
        on right: 22
    CompilationUnit <ptr> (96)
        on left: 25
        on right: 0
    OrdinaryCompilationUnit <ptr> (97)
        on left: 26 27
        on right: 25
    TopLevelClassOrInterfaceDeclarations <ptr> (98)
        on left: 28 29
        on right: 26 27 29
    TopLevelClassOrInterfaceDeclaration <ptr> (99)
        on left: 30 31
        on right: 29
    PackageDeclaration <ptr> (100)
        on left: 32
        on right: 26
    ClassDeclaration <ptr> (101)
        on left: 33 34
        on right: 30 96
    Modifiers <ptr> (102)
        on left: 35 36
        on right: 33 36 48 57 59 75
    Modifier <ptr> (103)
        on left: 37 38 39 40
        on right: 35 36
    ClassBody <ptr> (104)
        on left: 41
        on right: 33 34 85
    ClassBodyDeclarations <ptr> (105)
        on left: 42 43
        on right: 41 43
    ClassBodyDeclaration <ptr> (106)
        on left: 44 45 46 47
        on right: 43
    FieldDeclaration <ptr> (107)
        on left: 48 49
        on right: 44
    VariableDeclaratorList <ptr> (108)
        on left: 50 51
        on right: 48 49 51 97
    VariableDeclarator <ptr> (109)
        on left: 52 53
        on right: 50 51
    Declarator <ptr> (110)
        on left: 54 55
        on right: 52 53 55
    MethodDeclaration <ptr> (111)
        on left: 56
        on right: 45
    MethodHeader <ptr> (112)
        on left: 57 58 59 60
        on right: 56
    VOID2 <ptr> (113)
        on left: 61
        on right: 59 60
    MethodorConstrDeclarator <ptr> (114)
        on left: 62 63
        on right: 57 58 59 60 75
    SimpleName2 <ptr> (115)
        on left: 64
        on right: 62 63 71
    VariableInitializer <ptr> (116)
        on left: 65 66
        on right: 53 88 89
    Dimsy <ptr> (117)
        on left: 67 68
        on right: 63 71 192
    FormalParameterList <ptr> (118)
        on left: 69 70
        on right: 62 70
    FormalParameter <ptr> (119)
        on left: 71
        on right: 69 70
    MethodBody <ptr> (120)
        on left: 72 73
        on right: 56
    StaticInitializer <ptr> (121)
        on left: 74
        on right: 46
    ConclassorDeclaration <ptr> (122)
        on left: 75
        on right: 47
    ConclassorBody <ptr> (123)
        on left: 76 77
        on right: 75
    ExplicitConclassorInvocation <ptr> (124)
        on left: 78 79
        on right: 76
    ArgumentListy <ptr> (125)
        on left: 80 81
        on right: 78 79 176 187 188 189
    comay <ptr> (126)
        on left: 82 83
        on right: 86 87
    ClassBodyy <ptr> (127)
        on left: 84 85
        on right: 176
    ArrayInitializer <ptr> (128)
        on left: 86 87
        on right: 66 193
    VariableInitializerList <ptr> (129)
        on left: 88 89
        on right: 86 89
    Block <ptr> (130)
        on left: 90
        on right: 72 74 109 160
    BlockStatements <ptr> (131)
        on left: 91 92
        on right: 76 77 90 92
    BlockStatement <ptr> (132)
        on left: 93 94
        on right: 92
    Declaration_list <ptr> (133)
        on left: 95 96
        on right: 93
    LocalVariableDeclaration <ptr> (134)
        on left: 97
        on right: 95 140 148
    Statement <ptr> (135)
        on left: 98 99 100 101 102 103
        on right: 94 118 130 131 133 135 136
    StatementNoShortIf <ptr> (136)
        on left: 104 105 106 107 108
        on right: 119 131 132 134 137 138
    StatementWithoutTrailingSubstatement <ptr> (137)
        on left: 109 110 111 112 113 114 115 116 117
        on right: 98 104
    LabeledStatement <ptr> (138)
        on left: 118
        on right: 99
    LabeledStatementNoShortIf <ptr> (139)
        on left: 119
        on right: 105
    ExpressionStatement <ptr> (140)
        on left: 120
        on right: 111
    StatementExpression <ptr> (141)
        on left: 121 122 123 124 125 126 127
        on right: 120 150 151 162
    IF_CODE <ptr> (142)
        on left: 129
        on right: 130 131 132
    $@1 (143)
        on left: 128
        on right: 129
    IfThenStatement <ptr> (144)
        on left: 130
        on right: 100
    IfThenElseStatement <ptr> (145)
        on left: 131
        on right: 101
    IfThenElseStatementNoShortIf <ptr> (146)
        on left: 132
        on right: 106
    WhileStatement <ptr> (147)
        on left: 133
        on right: 102
    WhileStatementNoShortIf <ptr> (148)
        on left: 134
        on right: 107
    ForStatement <ptr> (149)
        on left: 135 136
        on right: 103
    ForStatementNoShortIf <ptr> (150)
        on left: 137 138
        on right: 108
    BasicForHeader <ptr> (151)
        on left: 139
        on right: 135 137
    EnhancedForHeader <ptr> (152)
        on left: 140
        on right: 136 138
    ForInity <ptr> (153)
        on left: 141 142
        on right: 139
    Expressiony <ptr> (154)
        on left: 143 144
        on right: 139
    ForUpdatey <ptr> (155)
        on left: 145 146
        on right: 139
    ForInit <ptr> (156)
        on left: 147 148
        on right: 142
    ForUpdate <ptr> (157)
        on left: 149
        on right: 146
    StatementExpressionList <ptr> (158)
        on left: 150 151
        on right: 147 149 151
    BreakStatement <ptr> (159)
        on left: 152 153
        on right: 112
    YieldStatement <ptr> (160)
        on left: 154
        on right: 117
    ContinueStatement <ptr> (161)
        on left: 155 156
        on right: 113
    ReturnStatement <ptr> (162)
        on left: 157 158
        on right: 114
    ThrowStatement <ptr> (163)
        on left: 159
        on right: 116
    SynchronizedStatement <ptr> (164)
        on left: 160
        on right: 115
    EXPR_CODE <ptr> (165)
        on left: 162
        on right: 133 134
    $@2 (166)
        on left: 161
        on right: 162
    N <ptr> (167)
        on left: 163
        on right: 131 132
    Primary <ptr> (168)
        on left: 164 165
        on right: 175 183 188 263
    PrimaryNoNewArray <ptr> (169)
        on left: 166 167 168 169 170 171 172
        on right: 164 186
    ClassInstanceCreationExpression <ptr> (170)
        on left: 173 174 175
        on right: 127 169
    UnqualifiedClassInstanceCreationExpression <ptr> (171)
        on left: 176
        on right: 173 174 175
    ClassOrInterfaceTypeToInstantiate <ptr> (172)
        on left: 177
        on right: 176
    TypeArgumentsOrDiamondy <ptr> (173)
        on left: 178 179
        on right: 177
    ClassOrInterfaceTypeToInstant <ptr> (174)
        on left: 180 181
        on right: 177 181
    TypeArgumentsOrDiamond <ptr> (175)
        on left: 182
        on right: 179
    FieldAccess <ptr> (176)
        on left: 183 184
        on right: 170 203
    ArrayAccess <ptr> (177)
        on left: 185 186
        on right: 171 204
    MethodInvocation <ptr> (178)
        on left: 187 188 189
        on right: 126 172
    ArgumentList <ptr> (179)
        on left: 190 191
        on right: 81 191
    ArrayCreationExpression <ptr> (180)
        on left: 192 193
        on right: 165
    DimExprs <ptr> (181)
        on left: 194 195
        on right: 192 195
    DimExpr <ptr> (182)
        on left: 196
        on right: 194 195
    Expression <ptr> (183)
        on left: 197
        on right: 65 129 140 144 154 157 159 160 168 185 186 190 191 196 217
    AssignmentExpression <ptr> (184)
        on left: 198 199
        on right: 197 201
    Assignment <ptr> (185)
        on left: 201
        on right: 121 198
    $@4 (186)
        on left: 200
        on right: 201
    LeftHandSide <ptr> (187)
        on left: 202 203 204
        on right: 201
    AssignmentOperator <ptr> (188)
        on left: 205 206 207 208 209 210 211 212 213 214 215 216
        on right: 201
    ConditionalExpression <ptr> (189)
        on left: 217 218
        on right: 199 217
    GOTO_COND <ptr> (190)
        on left: 219
        on right: 217
    WRITE_GOTO <ind> (191)
        on left: 220
        on right: 217
    ConditionalOrExpression <ptr> (192)
        on left: 221 222
        on right: 218 219 223
    GOTO_OR <ptr> (193)
        on left: 223
        on right: 221
    ConditionalAndExpression <ptr> (194)
        on left: 224 225
        on right: 221 222 226
    GOTO_AND <ptr> (195)
        on left: 226
        on right: 224
    InclusiveOrExpression <ptr> (196)
        on left: 227 228
        on right: 224 225 227
    ExclusiveOrExpression <ptr> (197)
        on left: 229 230
        on right: 227 228 229
    AndExpression <ptr> (198)
        on left: 231 232
        on right: 229 230 231
    EqualityExpression <ptr> (199)
        on left: 233 234 235
        on right: 231 232 233 234
    RelationalExpression <ptr> (200)
        on left: 236 237 238 239 240
        on right: 233 234 235 236 237 238 239
    ShiftExpression <ptr> (201)
        on left: 241 242 243 244
        on right: 236 237 238 239 240 241 242 243
    AdditiveExpression <ptr> (202)
        on left: 245 246 247
        on right: 241 242 243 244 245 246
    MultiplicativeExpression <ptr> (203)
        on left: 248 249 250 251
        on right: 245 246 247 248 249 250
    UnaryExpression <ptr> (204)
        on left: 252 253 254 255 256
        on right: 248 249 250 251 254 255 257 258 260 261 269
    PreIncrementExpression <ptr> (205)
        on left: 257
        on right: 122 252
    PreDecrementExpression <ptr> (206)
        on left: 258
        on right: 123 253
    UnaryExpressionNotPlusMinus <ptr> (207)
        on left: 259 260 261 262
        on right: 256
    PostfixExpression <ptr> (208)
        on left: 263 264 265 266
        on right: 259 267 268
    PostIncrementExpression <ptr> (209)
        on left: 267
        on right: 124 265
    PostDecrementExpression <ptr> (210)
        on left: 268
        on right: 125 266
    CastExpression <ptr> (211)
        on left: 269
        on right: 262
    G <ptr> (212)
        on left: 270
        on right: 33 34
    S <ptr> (213)
        on left: 271
        on right: 33 34
    NEXT_QUAD <ind> (214)
        on left: 272
        on right: 62 70 92 118 130 131 132 133 134 217 221 224
    ChangeTable <ptr> (215)
        on left: 273
        on right: 90
    A <ptr> (216)
        on left: 274
        on right: 62 63


State 0

    0 $accept: . CompilationUnit $end

    ';'      shift, and go to state 1
    PACKAGE  shift, and go to state 2
    PRIVATE  shift, and go to state 3
    PUBLIC   shift, and go to state 4
    FINAL    shift, and go to state 5
    STATIC   shift, and go to state 6
    CLASS    shift, and go to state 7

    $default  reduce using rule 28 (TopLevelClassOrInterfaceDeclarations)

    CompilationUnit                       go to state 8
    OrdinaryCompilationUnit               go to state 9
    TopLevelClassOrInterfaceDeclarations  go to state 10
    TopLevelClassOrInterfaceDeclaration   go to state 11
    PackageDeclaration                    go to state 12
    ClassDeclaration                      go to state 13
    Modifiers                             go to state 14
    Modifier                              go to state 15


State 1

   31 TopLevelClassOrInterfaceDeclaration: ';' .

    $default  reduce using rule 31 (TopLevelClassOrInterfaceDeclaration)


State 2

   32 PackageDeclaration: PACKAGE . Name ';'

    Identifier  shift, and go to state 16

    Name           go to state 17
    SimpleName     go to state 18
    QualifiedName  go to state 19


State 3

   38 Modifier: PRIVATE .

    $default  reduce using rule 38 (Modifier)


State 4

   37 Modifier: PUBLIC .

    $default  reduce using rule 37 (Modifier)


State 5

   40 Modifier: FINAL .

    $default  reduce using rule 40 (Modifier)


State 6

   39 Modifier: STATIC .

    $default  reduce using rule 39 (Modifier)


State 7

   34 ClassDeclaration: CLASS . G S ClassBody

    Identifier  shift, and go to state 20

    G  go to state 21


State 8

    0 $accept: CompilationUnit . $end

    $end  shift, and go to state 22


State 9

   25 CompilationUnit: OrdinaryCompilationUnit .

    $default  reduce using rule 25 (CompilationUnit)


State 10

   27 OrdinaryCompilationUnit: TopLevelClassOrInterfaceDeclarations .

    $default  reduce using rule 27 (OrdinaryCompilationUnit)


State 11

   29 TopLevelClassOrInterfaceDeclarations: TopLevelClassOrInterfaceDeclaration . TopLevelClassOrInterfaceDeclarations

    ';'      shift, and go to state 1
    PRIVATE  shift, and go to state 3
    PUBLIC   shift, and go to state 4
    FINAL    shift, and go to state 5
    STATIC   shift, and go to state 6
    CLASS    shift, and go to state 7

    $default  reduce using rule 28 (TopLevelClassOrInterfaceDeclarations)

    TopLevelClassOrInterfaceDeclarations  go to state 23
    TopLevelClassOrInterfaceDeclaration   go to state 11
    ClassDeclaration                      go to state 13
    Modifiers                             go to state 14
    Modifier                              go to state 15


State 12

   26 OrdinaryCompilationUnit: PackageDeclaration . TopLevelClassOrInterfaceDeclarations

    ';'      shift, and go to state 1
    PRIVATE  shift, and go to state 3
    PUBLIC   shift, and go to state 4
    FINAL    shift, and go to state 5
    STATIC   shift, and go to state 6
    CLASS    shift, and go to state 7

    $default  reduce using rule 28 (TopLevelClassOrInterfaceDeclarations)

    TopLevelClassOrInterfaceDeclarations  go to state 24
    TopLevelClassOrInterfaceDeclaration   go to state 11
    ClassDeclaration                      go to state 13
    Modifiers                             go to state 14
    Modifier                              go to state 15


State 13

   30 TopLevelClassOrInterfaceDeclaration: ClassDeclaration .

    $default  reduce using rule 30 (TopLevelClassOrInterfaceDeclaration)


State 14

   33 ClassDeclaration: Modifiers . CLASS G S ClassBody

    CLASS  shift, and go to state 25


State 15

   35 Modifiers: Modifier .
   36          | Modifier . Modifiers

    PRIVATE  shift, and go to state 3
    PUBLIC   shift, and go to state 4
    FINAL    shift, and go to state 5
    STATIC   shift, and go to state 6

    $default  reduce using rule 35 (Modifiers)

    Modifiers  go to state 26
    Modifier   go to state 15


State 16

   23 SimpleName: Identifier .

    $default  reduce using rule 23 (SimpleName)


State 17

   24 QualifiedName: Name . '.' SimpleName
   32 PackageDeclaration: PACKAGE Name . ';'

    '.'  shift, and go to state 27
    ';'  shift, and go to state 28


State 18

   21 Name: SimpleName .

    $default  reduce using rule 21 (Name)


State 19

   22 Name: QualifiedName .

    $default  reduce using rule 22 (Name)


State 20

  270 G: Identifier .

    $default  reduce using rule 270 (G)


State 21

   34 ClassDeclaration: CLASS G . S ClassBody

    $default  reduce using rule 271 (S)

    S  go to state 29


State 22

    0 $accept: CompilationUnit $end .

    $default  accept


State 23

   29 TopLevelClassOrInterfaceDeclarations: TopLevelClassOrInterfaceDeclaration TopLevelClassOrInterfaceDeclarations .

    $default  reduce using rule 29 (TopLevelClassOrInterfaceDeclarations)


State 24

   26 OrdinaryCompilationUnit: PackageDeclaration TopLevelClassOrInterfaceDeclarations .

    $default  reduce using rule 26 (OrdinaryCompilationUnit)


State 25

   33 ClassDeclaration: Modifiers CLASS . G S ClassBody

    Identifier  shift, and go to state 20

    G  go to state 30


State 26

   36 Modifiers: Modifier Modifiers .

    $default  reduce using rule 36 (Modifiers)


State 27

   24 QualifiedName: Name '.' . SimpleName

    Identifier  shift, and go to state 16

    SimpleName  go to state 31


State 28

   32 PackageDeclaration: PACKAGE Name ';' .

    $default  reduce using rule 32 (PackageDeclaration)


State 29

   34 ClassDeclaration: CLASS G S . ClassBody

    '{'  shift, and go to state 32

    ClassBody  go to state 33


State 30

   33 ClassDeclaration: Modifiers CLASS G . S ClassBody

    $default  reduce using rule 271 (S)

    S  go to state 34


State 31

   24 QualifiedName: Name '.' SimpleName .

    $default  reduce using rule 24 (QualifiedName)


State 32

   41 ClassBody: '{' . ClassBodyDeclarations '}'

    $default  reduce using rule 42 (ClassBodyDeclarations)

    ClassBodyDeclarations  go to state 35


State 33

   34 ClassDeclaration: CLASS G S ClassBody .

    $default  reduce using rule 34 (ClassDeclaration)


State 34

   33 ClassDeclaration: Modifiers CLASS G S . ClassBody

    '{'  shift, and go to state 32

    ClassBody  go to state 36


State 35

   41 ClassBody: '{' ClassBodyDeclarations . '}'
   43 ClassBodyDeclarations: ClassBodyDeclarations . ClassBodyDeclaration
